--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bevel-ts-client",
-  "version": "1.0.0",
+  "name": "@bevel-software/bevel-ts-client",
+  "version": "1.0.1",
   "description": "TypeScript client for the Bevel Graph REST API",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
